--- a/submit/prj1-sol/README
+++ b/submit/prj1-sol/README
@@ -1,6 +1,11 @@
-Name:		XXX
-B-Number:	XXX
-Email:		XXX
+Name:		Ruchira Thete
+B-Number:	B00815352
+Email:		rthete1@binghamton.edu
 
-Add text here as needed.
+Project 1:
+This project involves building the internals of a spreadsheet with all data stored entirely in memory.
 
+No. of Slack days used: 2 days
+
+Test case Completed:
+Test 1
