--- a/submit/prj4-sol/README
+++ b/submit/prj4-sol/README
@@ -12,3 +12,5 @@ The aims of this project are as follows:
 Overview:
 In this project, you will use the spreadsheet store web services implemented in Project 3 to display a rudimentary UI which allows displaying and updating spreadsheets using a browser.
 
+
+No. slack Days used: 3
